# sp_matmul_rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench_rust_vs_cpp_scipy.py  results_20000.md  results_full.md  tfidf_A_20000.npz  tfidf_A_5000.npz  tfidf_B_20000.npz  tfidf_B_5000.npz
benches/: tfidf_like.rs
examples/: chunk_probe.rs  dense_drain_ab.rs  dense_mode_ab.rs  ilp_unroll_ab.rs  phase_timing.rs  phase_timing_chunked.rs  phase_timing_tiled.rs  profile_target.rs  sg_ab.rs  tiled_default_ab.rs
python/sp_matmul_rs/: __init__.py  api.py  types.py
src/: chunked.rs  csr.rs  index.rs  lib.rs  matmul.rs  matmul_topn.rs  maxheap.rs  parallel.rs  python.rs  scalar.rs  tiled.rs  zip.rs
src/python/: conv.rs  dispatch.rs
tests/: chunk_invariance.rs  parity.rs  properties.rs  threading_invariance.rs
tests/common/: mod.rs
tests/data/: all_below_threshold_f32_i32.npz  all_below_threshold_f32_i64.npz  all_below_threshold_f64_i32.npz  all_below_threshold_f64_i64.npz  all_below_threshold_i32_i32.npz  all_below_threshold_i32_i64.npz  all_below_threshold_i64_i32.npz  all_below_threshold_i64_i64.npz  empty_a_f32_i32.npz  empty_a_f32_i64.npz  empty_a_f64_i32.npz  empty_a_f64_i64.npz  empty_a_i32_i32.npz  empty_a_i32_i64.npz  empty_a_i64_i32.npz  empty_a_i64_i64.npz  empty_b_f32_i32.npz  empty_b_f32_i64.npz  empty_b_f64_i32.npz  empty_b_f64_i64.npz  empty_b_i32_i32.npz  empty_b_i32_i64.npz  empty_b_i64_i32.npz  empty_b_i64_i64.npz  generate_goldens.py  small_dense_f32_i32.npz  small_dense_f32_i64.npz  small_dense_f64_i32.npz  small_dense_f64_i64.npz  small_dense_i32_i32.npz  small_dense_i32_i64.npz  small_dense_i64_i32.npz  small_dense_i64_i64.npz  tall_skinny_f32_i32.npz  tall_skinny_f32_i64.npz  tall_skinny_f64_i32.npz  tall_skinny_f64_i64.npz  tall_skinny_i32_i32.npz  tall_skinny_i32_i64.npz  tall_skinny_i64_i32.npz  (+41 more)
tests/python/: _resources.py  test_api.py  test_bindings.py
